<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ShopListActivity">

        <ImageView
            android:id="@+id/carpet"
            android:layout_width="120dp"
            android:layout_height="155dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/carpet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/images" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="72dp"
            android:text="@string/product_description"
            app:layout_constraintLeft_toRightOf="@id/carpet"
            app:layout_constraintTop_toTopOf="@id/carpet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:text="@string/carpet_price"
            app:layout_constraintLeft_toRightOf="@id/carpet"
            app:layout_constraintTop_toTopOf="@id/carpet" />

        <Button
            android:id="@+id/notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/notify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carpet" />

        <Button
            android:id="@+id/to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:text="@string/to_cart"
            app:layout_constraintStart_toStartOf="@id/notification_button"
            app:layout_constraintTop_toBottomOf="@+id/carpet" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>